--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		
 		<link href="./_app/immutable/assets/0.BkWtLAkw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CLx97_4k.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.5AZyN4uD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/OW6tjrpr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fEW4B8lK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/fOaGcbkY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D7k1Uvis.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_cJQfJi.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DxycLPUZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B9LvUNRQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CSpAqOmT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwYYdo5Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1DJzFZd.js">
@@ -25,15 +25,16 @@
 			
 			<script>
 				{
-					__sveltekit_f07gbb = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_q7bw9 = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/simple_forest_editor"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.5AZyN4uD.js"),
-						import("./_app/immutable/entry/app.DxycLPUZ.js")
+						import("./_app/immutable/entry/start.fEW4B8lK.js"),
+						import("./_app/immutable/entry/app.B9LvUNRQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
