--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		
 		<link href="./_app/immutable/assets/0.BkWtLAkw.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CLx97_4k.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.fEW4B8lK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fOaGcbkY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.63QSiLoL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CrEjmvKh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D7k1Uvis.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_cJQfJi.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B9LvUNRQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.unr_98rs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CSpAqOmT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwYYdo5Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1DJzFZd.js">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_q7bw9 = {
+					__sveltekit_159xzo5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/simple_forest_editor"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.fEW4B8lK.js"),
-						import("./_app/immutable/entry/app.B9LvUNRQ.js")
+						import("./_app/immutable/entry/start.63QSiLoL.js"),
+						import("./_app/immutable/entry/app.unr_98rs.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
