--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:600,300" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="/simple_forest_editor/_app/immutable/assets/0.C36qyEmM.css" rel="stylesheet">
-		<link href="/simple_forest_editor/_app/immutable/assets/2.CLx97_4k.css" rel="stylesheet">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/entry/start.CqiSHW4N.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/DbWvAMaR.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/D7k1Uvis.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/C_cJQfJi.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/entry/app.2OpsxfO3.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/CSpAqOmT.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/CwYYdo5Y.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/D1DJzFZd.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/nodes/0.H0HYuxP1.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/nodes/2.yj908PQ-.js">
-		<link rel="modulepreload" href="/simple_forest_editor/_app/immutable/chunks/CrteNLGQ.js"><!--[--><meta name="description" content="Json tree editor"><!--]--><title>json editor</title>
+		<link href="/simple_forest_editor/app/immutable/assets/0.BVpJ3F2Q.css" rel="stylesheet">
+		<link href="/simple_forest_editor/app/immutable/assets/2.CLx97_4k.css" rel="stylesheet">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/start.CBepCpjG.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/DLSsmDhc.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/D7k1Uvis.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/C_cJQfJi.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/app.DPuRm_Pf.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/CSpAqOmT.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/CwYYdo5Y.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/D1DJzFZd.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/nodes/0.5TKzYfky.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/nodes/2.C_AyoiT9.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/CrteNLGQ.js"><!--[--><meta name="description" content="Json tree editor"><!--]--><title>json editor</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1h6j3gt"><main class="svelte-1h6j3gt"><!----><div class="main-canvas svelte-1nyn24s"><div class="menu svelte-6pag8s"><!--[--><button>Save</button> <button>Load</button><!--]--></div><!----> <canvas class="backdrops svelte-1nyn24s"></canvas> <div class="container-background svelte-1nyn24s"><div class="main-container svelte-1nyn24s" style="translate: 0px 0px;"><!--[--><!--]--></div></div></div><!----><!----></main> <footer class="svelte-1h6j3gt"><p>visit <a href="https://svelte.dev/docs/kit" class="svelte-1h6j3gt">svelte.dev/docs/kit</a> to learn about SvelteKit</p></footer></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_7ulfsl = {
+					__sveltekit_bp1wnr = {
 						base: "/simple_forest_editor",
 						assets: "/simple_forest_editor"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/simple_forest_editor/_app/immutable/entry/start.CqiSHW4N.js"),
-						import("/simple_forest_editor/_app/immutable/entry/app.2OpsxfO3.js")
+						import("/simple_forest_editor/app/immutable/entry/start.CBepCpjG.js"),
+						import("/simple_forest_editor/app/immutable/entry/app.DPuRm_Pf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
