--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		
 		<link href="/simple_forest_editor/app/immutable/assets/0.BVpJ3F2Q.css" rel="stylesheet">
 		<link href="/simple_forest_editor/app/immutable/assets/2.CLx97_4k.css" rel="stylesheet">
-		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/start.CBepCpjG.js">
-		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/DLSsmDhc.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/start.L741FK5N.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/BCxPEXfi.js">
 		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/D7k1Uvis.js">
 		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/C_cJQfJi.js">
-		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/app.DPuRm_Pf.js">
+		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/entry/app.nlNNR5ca.js">
 		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/CSpAqOmT.js">
 		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/CwYYdo5Y.js">
 		<link rel="modulepreload" href="/simple_forest_editor/app/immutable/chunks/D1DJzFZd.js">
@@ -25,7 +25,7 @@
 			
 			<script>
 				{
-					__sveltekit_bp1wnr = {
+					__sveltekit_y3brp2 = {
 						base: "/simple_forest_editor",
 						assets: "/simple_forest_editor"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/simple_forest_editor/app/immutable/entry/start.CBepCpjG.js"),
-						import("/simple_forest_editor/app/immutable/entry/app.DPuRm_Pf.js")
+						import("/simple_forest_editor/app/immutable/entry/start.L741FK5N.js"),
+						import("/simple_forest_editor/app/immutable/entry/app.nlNNR5ca.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
